
-BUG FIX: Miscellaneous

-Revised plugin system, with the new feature to expose plugins in the interface within a new primary navigation menu named "Plugin Area" (which will only show if a plugin's dev config is flagged to show there...see plugins documentation for more details)

-Added Bitcoin and Solana network stats, to the "on-chain-stats" plugin (shows in the new "Plugin Area" navigation menu automatically in NEW installs, but must be activated in "Admin Area => Plugins" for EXISTING installations)

-Loosened username restrictions for the "Admin Area => Security => Interface Login" setting (so only validity check is a 4 character MINIMUM)

-Tighter obfuscation in API error logging (only the API's top-level-domain is shown in logs, any subdomain / path data is FULLY REMOVED)

-Increased amount of currency / crypto maximum decimals allowed (in the "Asset Tracking => Currency Support" Admin Config)

-Tweaks to coingecko API throttling, for a better user experience

-Better AlphaVantage "Stock Overview" API integration / UX

-Added support for OkEx perpetual (futures) markets

-Added support for Gate.io USDT Futures markets

-Buildout of developer-only-maintenance plugin

-Server Edition auto-installer refactoring

-Better Server Edition auto-installer UX

-Minor user experience improvements

-Better stale cache files cleanup

-Upgraded BootStrap to v5.3.8

-Miscellaneous optimizations

-Refactoring

-------------------------------------------------------------------



-------------------------------------------------------------------
6.01.08

-BUG FIX: Privacy Mode's tab title set to 3 dots, to avoid leaking the app server domain in the tab title (the default when no title set for Chrome)

-BUG FIX: Miscellaneous

-Cleaned up stale links, in the resources section

-Miscellaneous user experience improvements

-Crypto security practices documentation

-Revised DEMO config

-------------------------------------------------------------------






